Bug 121281 - FILEOPEN XLSX Chart data labels created with Excel cover each other when the document is opened in Calc
Summary: FILEOPEN XLSX Chart data labels created with Excel cover each other when the ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.2.0
Keywords: bisected, filter:xlsx
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2018-11-08 16:38 UTC by Gabor Kelemen (Collabora)
Modified: 2021-01-11 11:51 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the file in Excel and current Calc (210.39 KB, image/png)
2018-12-10 14:33 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the original document in Excel and current nightly (190.13 KB, image/png)
2020-08-10 07:53 UTC, NISZ LibreOffice Team
Details
Screenshot of the unit test document before and after the fix (19.53 KB, image/png)
2020-12-28 11:03 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2018-11-08 16:38:33 UTC
See attachment #146447 [details]  and attachment 146448 [details] from bug #121279

Imported upper Pie Chart data labels in XLSX documents created with Microsoft Excel 2010 cover each other when the document is opened in LibreOffice Calc 6.2.0.0.alpha1+.

Steps to reproduce:

    1. Open the attached XLSX file in LibreOffice Calc
    2. View the attached screenshot
    3. Notice, that chart data labels cover each other

Actual results:
Chart data labels  cover each other when the document is opened in LibreOffice Calc 6.2.0.0.alpha1+.

Expected results:
Chart data labels  should have the same position as the original file as when the document is opened in Microsoft Excel 2010

LibreOffice details:
Version: 6.2.0.0.alpha1+
Build ID: 2cef68a605494bcef0388201b1058c95788c45a8
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); Calc: threaded
Comment 1 Xisco Faulí 2018-11-09 13:28:06 UTC
It might get fixed if bug 121279 is fixed

The label import got implemented in https://cgit.freedesktop.org/libreoffice/core/commit/?id=790f9abeb1a1167ad5ab84c5fb855b36669c125b

Reproduced in

Version: 6.2.0.0.alpha1+
Build ID: 0f68e45e2ec6b9fa8c562044e88355d95af0347d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Gabor Kelemen (Collabora) 2018-12-10 14:33:53 UTC
Created attachment 147420 [details]
Screenshot of the file in Excel and current Calc

It got a lot better in:

Version: 6.3.0.0.alpha0+
Build ID: f3ea5e21bea80004b04edbf0287d4a2e1aaef5d0
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded

But some custom formatting is still there, the font size appears larger than in Excel.
Comment 3 Gabor Kelemen (Collabora) 2018-12-11 08:06:32 UTC
The incorrect font size problem is probably bug #108107
Comment 4 NISZ LibreOffice Team 2020-08-10 07:53:39 UTC
Created attachment 164088 [details]
Screenshot of the original document in Excel and current nightly

Looks better in todays nightly from 2020-08-08 03:16:08 after bug #134977 was fixed.
Comment 5 Commit Notification 2020-12-28 10:56:03 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f22b77f204e433004aeb5fc2885881c03a62aa70

tdf#121281 pie chart: improve data label position

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 László Németh 2020-12-28 11:03:43 UTC
Created attachment 168528 [details]
Screenshot of the unit test document before and after the fix

Commit https://gerrit.libreoffice.org/c/core/+/107829 has fixed the original document http://bugs.documentfoundation.org/attachment.cgi?id=146447 reported here, but
the unit test document of the commit is still not perfect, because the top border of the chart is higher, than the chart area. Likely we need to fix that, too.
Comment 7 NISZ LibreOffice Team 2021-01-11 11:51:51 UTC
Verified in:

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 96bafa464ebdbce3ef04bec9beae5e745bb37794
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded