tdf#121281 pie chart: improve data label position

to avoid chart distortion.

Move the data label to inside the chart area when it
goes outside the border.

Change-Id: I78669ed601f28129944ac8f61c6478d386322b76