chart2/qa/extras/chart2import.cxx
@@ -171,6 +171,7 @@ public:
     void testTdf137734();
     void testTdf137874();
     void testTdfCustomShapePos();
+    void testTdf121281();
 
     CPPUNIT_TEST_SUITE(Chart2ImportTest);
     CPPUNIT_TEST(Fdo60083);
@@ -291,6 +292,7 @@ public:
     CPPUNIT_TEST(testTdf137734);
     CPPUNIT_TEST(testTdf137874);
     CPPUNIT_TEST(testTdfCustomShapePos);
+    CPPUNIT_TEST(testTdf121281);
 
     CPPUNIT_TEST_SUITE_END();
 
@@ -2800,6 +2802,25 @@ void Chart2ImportTest::testTdfCustomShapePos()
         CPPUNIT_ASSERT_DOUBLES_EQUAL(4165, aSize.Width, 300);
         CPPUNIT_ASSERT_DOUBLES_EQUAL(1334, aSize.Height, 300);
     }
+}
+
+void Chart2ImportTest::testTdf121281()
+{
+    load("/chart2/qa/extras/data/xlsx/", "incorrect_label_position.xlsx");
+    Reference<chart::XChartDocument> xChartDoc(getChartDocFromSheet(0, mxComponent),
+                                               UNO_QUERY_THROW);
+    Reference<drawing::XDrawPageSupplier> xDrawPageSupplier(xChartDoc, UNO_QUERY_THROW);
+    Reference<drawing::XDrawPage> xDrawPage(xDrawPageSupplier->getDrawPage(), UNO_SET_THROW);
+    Reference<drawing::XShapes> xShapes(xDrawPage->getByIndex(0), UNO_QUERY_THROW);
+    Reference<drawing::XShape> xDataPointLabel(
+        getShapeByName(xShapes,
+                       "CID/MultiClick/CID/D=0:CS=0:CT=0:Series=0:DataLabels=:DataLabel=0"),
+        UNO_SET_THROW);
+
+    CPPUNIT_ASSERT(xDataPointLabel.is());
+    awt::Point aLabelPosition = xDataPointLabel->getPosition();
+    // This failed, if the data label flowed out of the chart area.
+    CPPUNIT_ASSERT_GREATEREQUAL(static_cast<sal_Int32>(0), aLabelPosition.Y);
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(Chart2ImportTest);
